--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To Do List App </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+  <div class="container">
+
+    <div class="todo-app">
+        <h2>To Do List <img src="images/icon.png"></h2>
+        <div class="row">
+
+            <input type="text" id="input-box" placeholder="Add your Text">
+            <button>Add</button>
+        </div>
+    </div>
+
+  </div>  
 </body>
 </html>
