--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
 
             <input type="text" id="input-box" placeholder="Add your Text">
-            <button>Add</button>
+            <button onClick="addTask()">Add</button>
         </div>
             <ul id="list-container">
                 <!-- <li class="checked">Task 1</li>
@@ -26,5 +26,7 @@
     </div>
 
   </div>  
+  <script src = "script.js"></script>
+
 </body>
 </html>
